# hackathon-todo-phase2

./: CONSTITUTION.md  README.md
backend/: .env  auth.py  database.py  main.py  models.py  pyproject.toml  render.yaml  requirement.txt
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  page.tsx
frontend/app/api/auth/[...all]/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/lib/: api.ts  auth.ts
specs/api/: rest-endpoints.md
specs/database/: schema.md
